# yaml-language-server: $schema=../../schemas/json/maestro-flow.json
- runFlow: Login.yaml
- runFlow:
    file: anotherFlow.yaml
    env:
      MY_PARAMETER: '123'
- runFlow:
    when:
      platform: iOS
    file: subflows/ios-permissions.yaml
- runFlow:
    when:
      notVisible: 'Biometric Login'
    commands:
      - tapOn: 'Standard Login'
- repeat:
    times: 3
    commands:
      - tapOn: Button
      - scroll
- repeat:
    while:
      notVisible: 'ValueX'
    commands:
      - tapOn: Button
- retry:
    maxRetries: 3
    commands:
      - tapOn:
          id: button-that-might-not-be-here-yet
- evalScript: ${output.counter = 0}
- assertTrue:
    condition: ${output.counter == 0}
    label: Counter starts at zero
- runScript: myScript.js
- runScript:
    file: script.js
    env:
      myParameter: Parameter
- assertWithAI:
    assertion: Login and password text fields are visible.
- extractTextWithAI: CAPTCHA value
- inputRandomText:
    length: 12
- inputRandomEmail
- travel:
    points:
      - '48.8578065, 2.295188'
      - '46.2276, 5.9900'
    speed: 150000
- doubleTapOn:
    id: icon
- longPressOn:
    text: Options
- copyTextFrom:
    id: title
