# yaml-language-server: $schema=../../schemas/json/maestro-flow.json
- tapOn: Login
- tapOn:
    text: '.*Continue.*'
- tapOn:
    id: login_button
    enabled: true
- tapOn:
    id: buy_button
    index: 2
- tapOn:
    css: .secondaryButton
- tapOn:
    point: '50%, 50%'
- tapOn:
    text: Submit
    below:
      text: Terms
- assertVisible:
    id: header_icon
    focused: false
- swipe:
    direction: LEFT
    duration: 2000
- swipe:
    from:
      id: feeditem_identifier
    direction: UP
- scrollUntilVisible:
    element:
      text: Footer
    direction: DOWN
    timeout: 15000
